--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 Django==4.2
 django-cryptography==1.1
 django-csp==3.7
+pylint==2.17.2
+
+Download the following modules before testing:
+django-cryptography
+django-csp
